--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   },
   "dependencies": {
     "@lukeed/uuid": "^2.0.0",
-    "axios": "^0.21.4",
+    "@vuelidate/core": "^2.0.0-alpha.26",
+    "@vuelidate/validators": "^2.0.0-alpha.22",
+    "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.33",
-    "vue": "^3.0.5"
+    "firebase": "^9.1.2",
+    "vue": "^3.0.5",
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.5",
